--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,7 @@ user:
     valid: !ruby/regexp '/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i'
   password:
     minimum: 6
+movie:
+  home_paginate: 4
+  admin_paginate: 16
+
